--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <a href="/Plant/index.html">plant</a>
+    <a href="../Landing-Pages/Plant/index.html">plant</a>
 </body>
 </html>
