--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello</h1>
     <a href="../Landing-Pages/Plant/index.html">plant</a>
+    <a href="../Landing-Pages/beverages/index.html">Beverages</a>
 </body>
 </html>
