--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello</h1>
     <a href="../Landing-Pages/Plant/index.html">plant</a>
     <a href="../Landing-Pages/beverages/index.html">Beverages</a>
+    <img height="100px" width="100px" src="https://images.unsplash.com/photo-1657458889762-7f163b9b459b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="">
 </body>
 </html>
